// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bundles chunks and assets: assets/index.esm-wrapper-72fbbdd0.js 1`] = `
"(function () {
  'use strict';

  const importPath = \\"content2/index.js\\";

  const url = chrome.runtime.getURL(importPath);
  import(
    /* @vite-ignore */
    url
  ).catch((err) => {
    console.warn(\`Could not import \${importPath} from \${chrome.runtime.getManifest().name}\`);
    console.error(err);
  });

})();
"
`;

exports[`bundles chunks and assets: assets/index.esm-wrapper-600ffb76.js 1`] = `
"(function () {
  'use strict';

  const importPath = \\"content1/index.js\\";

  const url = chrome.runtime.getURL(importPath);
  import(
    /* @vite-ignore */
    url
  ).catch((err) => {
    console.warn(\`Could not import \${importPath} from \${chrome.runtime.getManifest().name}\`);
    console.error(err);
  });

})();
"
`;

exports[`bundles chunks and assets: assets/index-5dfee6cc.css 1`] = `
"body {
  color: blue;
}
"
`;

exports[`bundles chunks and assets: assets/index-5f7d7b6f.css 1`] = `
"body {
  color: red;
}
"
`;

exports[`bundles chunks and assets: files 1`] = `
Array [
  "assets/index.esm-wrapper-600ffb76.js",
  "assets/index.esm-wrapper-72fbbdd0.js",
  "assets/index-5f7d7b6f.css",
  "assets/index-5dfee6cc.css",
]
`;

exports[`bundles chunks and assets: manifest.json 1`] = `
Object {
  "content_scripts": Array [
    Object {
      "css": Array [
        "assets/index-5f7d7b6f.css",
      ],
      "js": Array [
        "assets/index.esm-wrapper-600ffb76.js",
      ],
      "matches": Array [
        "http://*/*",
        "https://*/*",
      ],
    },
    Object {
      "css": Array [
        "assets/index-5dfee6cc.css",
      ],
      "js": Array [
        "assets/index.esm-wrapper-72fbbdd0.js",
      ],
      "matches": Array [
        "http://*/*",
        "https://*/*",
      ],
    },
  ],
  "description": "integration tests",
  "manifest_version": 3,
  "name": "Test",
  "permissions": Array [],
  "version": "1.0.0",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "http://*/*",
        "https://*/*",
      ],
      "resources": Array [
        "content1/index.js",
        "content2/index.js",
      ],
    },
  ],
}
`;
